# flow-function-mcp

./: CLAUDE.md  Cargo.toml
.github/workflows/: deploy.yml
docs/adr/: ADR-001-architecture.md  ADR-002-data-access-strategy.md  ADR-003-indicator-computation-seed-lookback.md  ADR-004-smart-money-concepts-domain.md  ADR-005-non-ohlcv-functions.md  ADR-006-strong-typing-and-parse-dont-validate.md
src/: main.rs
src/adapters/: composite.rs  mod.rs
src/adapters/mcp/: candle_source.rs  mod.rs  server.rs
src/adapters/pcts/: client.rs  mod.rs
src/adapters/sqlite/: mod.rs  queries.rs
src/domain/: candle.rs  flow.rs  ha.rs  mod.rs  pair.rs  timeframe.rs  types.rs  window.rs
src/domain/backtest/: fib_targets_backtest.rs  fib_time_zones_backtest.rs  harmonic_patterns_backtest.rs  mod.rs  multi_anchor_fib_backtest.rs  order_blocks_backtest.rs  order_flow_backtest.rs  orderbook_pressure_backtest.rs  structure_backtest.rs
src/domain/indicators/: atr.rs  bollinger.rs  donchian.rs  ma.rs  mod.rs  rsi.rs  volatility.rs
src/domain/onchain/: governance.rs  mod.rs  orderbook.rs  staking.rs  wallet.rs
src/domain/smc/: fib_confluence.rs  fib_profile.rs  fib_targets.rs  fib_time_zones.rs  fvg.rs  harmonics.rs  liquidity.rs  mod.rs  multi_anchor_fib.rs  order_blocks.rs  pivots.rs  structure.rs
src/ports/: market_data.rs  mod.rs  onchain.rs
